--- a/Example/Swift/Podfile
+++ b/Example/Swift/Podfile
@@ -3,6 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 target 'WRSwiftKit_Example' do
-  pod 'WRSwiftKit'
+  pod 'WRSwiftKit', :path => '../'
 
 end
