--- a/Example_iOS/Podfile
+++ b/Example_iOS/Podfile
@@ -1,7 +1,13 @@
 use_frameworks!
 
+platform :ios, '8.0'
+
 target 'WRSwiftKit_Example' do
   pod 'WRSwiftKit', :path => '../'
 
+  target 'WRSwiftKit_Tests' do
+    inherit! :search_paths
 
+    
+  end
 end
