--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,5 +3,9 @@ use_frameworks!
 target 'WRSwiftKit_Example' do
   pod 'WRSwiftKit', :path => '../'
 
+  target 'WRSwiftKit_Tests' do
+    inherit! :search_paths
 
+    
+  end
 end
