--- a/Example/WRSwiftKit/Info.plist
+++ b/Example/WRSwiftKit/Info.plist
@@ -35,5 +35,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问相册</string>
 </dict>
 </plist>
