--- a/Example/WRSwiftKit/Info.plist
+++ b/Example/WRSwiftKit/Info.plist
@@ -37,5 +37,7 @@
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要访问相册</string>
+	<key>NSCameraUsageDescription</key>
+	<string>需要访问相机</string>
 </dict>
 </plist>
