--- a/Example/WRSwiftKit/Info.plist
+++ b/Example/WRSwiftKit/Info.plist
@@ -39,5 +39,7 @@
 	<string>需要访问相册</string>
 	<key>NSCameraUsageDescription</key>
 	<string>需要访问相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要访问麦克风</string>
 </dict>
 </plist>
