--- a/Example/WRSwiftKit/Info.plist
+++ b/Example/WRSwiftKit/Info.plist
@@ -47,5 +47,7 @@
 	<string>需要访问蓝牙</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>需要访问日历</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要使用时访问位置</string>
 </dict>
 </plist>
