--- a/Example/WRSwiftKit/Info.plist
+++ b/Example/WRSwiftKit/Info.plist
@@ -49,5 +49,7 @@
 	<string>需要访问日历</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>需要使用时访问位置</string>
+	<key>NSMotionUsageDescription</key>
+	<string>需要访问移动数据</string>
 </dict>
 </plist>
